fix height of banner on smaller screens

--- a/src/app/hero-banner/hero-banner.scss
+++ b/src/app/hero-banner/hero-banner.scss
@@ -17,6 +17,7 @@
   inset: 0;
   pointer-events: none;
   z-index: 5;
+  height: 1000px;
 }
 
 .banner {
